<resources>
    <string name="app_name">Mod Control</string>
    <string name="action_settings">Settings</string>
    <string name="action_credits">Credits</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="_3minit_battery_in_aod">3Minit Battery in AOD</string>
    <string name="_3minit_battery_in_immersive">3Minit Battery in Immersive</string>
    <string name="_3minit_battery_in_statusbar">3Minit Battery in Statusbar</string>
    <string name="_3minit">3Minit</string>
    <string name="aosp_signal_icons">AOSP Signal Icons</string>
    <string name="blue">Blue</string>
    <string name="colored_quick_toggles">Colored Quick Toggles</string>
    <string name="enabled">Enabled</string>
    <string name="green">Green</string>
    <string name="lg_v20_mod_control">LG V20 Mod Control</string>
    <string name="multi">Multi</string>
    <string name="purple">Purple</string>
    <string name="red">Red</string>
    <string name="stausbar">Stausbar</string>
    <string name="white">White</string>
    <string name="_3minit_clock_in_statusbar">3Minit Clock in Statusbar</string>
    <string name="_3minit_clock_in_immersive">3Minit Clock in Immersive</string>
    <string name="_3minit_clock_in_aod">3Minit Clock in AOD</string>
    <string name="suggest_one">Suggest One!</string>
    <string name="colored_signature">Colored Signature</string>
    <string name="restart_systemui">Restart SystemUI</string>
    <string name="restart_signboard">Restart SignBoard</string>
    <string name="textview">TextView</string>
    <string name="make_your_selection_and_press_the_appropriate_reboot_button">Make your selection and press the appropriate reboot button.</string>
    <string name="aod">AOD, QTools, Sig</string>
    <string name="statusbar_immersive_mode">Stat, Imm, ChargeWarn</string>
    <string name="orange">Orange</string>
    <string name="colored_aod_signature">Colored AOD Signature</string>
    <string name="mod_installed">Mod Installed</string>
    <string name="currently_broken_if_enabled_you_ll_get_two_clocks">Currently broken. If enabled, you\'ll get two clocks in the AOD.</string>
    <string name="only_enable_if_you_have_flashed_my_mod">Only enable if you have flashed my mod!</string>
    <string name="play_store">Play Store</string>
    <string name="about">About</string>
    <string name="app_created_by_zacharee1">App created by Zacharee1</string>
    <string name="xda_thread">XDA Thread</string>
    <string name="credits">Credits</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="other">Other</string>
    <string name="communicate">Communicate</string>
    <string name="extra_mods">Extra Mods</string>
    <string name="home">Home</string>
    <string name="send">Send</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="universal_mods">Universal Mods</string>
    <string name="email">zachary.wander@gmail.com</string>
    <string name="icon">icon</string>
    <string name="dark_mode">Dark Mode</string>

    <string-array name="qt_index_options">
        <item>1st Toggle</item>
        <item>2nd Toggle</item>
        <item>3rd Toggle</item>
        <item>4th Toggle</item>
        <item>5th Toggle</item>
        <item>All Toggles</item>
    </string-array>
    <string-array name="navbar_index_options">
        <item>Back Button</item>
        <item>Home Button</item>
        <item>Menu Button</item>
        <item>4th Toggle</item>
        <item>5th Toggle</item>
        <item>All Toggles</item>
    </string-array>
</resources>
