<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.zacharee1.modcontrol.MainActivity"
    tools:showIn="@layout/activity_main">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lg_v20_mod_control"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:id="@+id/title"
                android:layout_alignParentRight="true"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textColor="#000000"
                tools:ignore="ObsoleteLayoutParam,RtlHardcoded" />

            <LinearLayout
                android:id="@+id/master"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/enable_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:text="@string/enabled"
                    android:textSize="20sp" />

                <Switch
                    android:id="@+id/enable_switch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:checked="false"
                    android:switchMinWidth="50dp"
                    android:switchTextAppearance="@style/TextAppearance.AppCompat"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/qtools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/qt_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_weight="1"
                    android:text="@string/colored_quick_toggles"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="20sp" />

                <RadioGroup
                    android:id="@+id/color_tool1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/white_tool"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:checked="false"
                        android:text="@string/white"
                        android:buttonTint="#ccc" />

                    <RadioButton
                        android:id="@+id/red_tool"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:checked="false"
                        android:text="@string/red"
                        android:buttonTint="#D32F2F" />

                    <RadioButton
                        android:id="@+id/green_tool"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:text="@string/green"
                        android:buttonTint="#689F38" />

                </RadioGroup>

                <RadioGroup
                    android:id="@+id/color_tool2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/blue_tool"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:checked="false"
                        android:text="@string/blue"
                        android:textAlignment="viewStart"
                        android:buttonTint="#303F9F" />

                    <RadioButton
                        android:id="@+id/purple_tool"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:checked="false"
                        android:text="@string/purple"
                        android:buttonTint="#7B1FA2" />

                    <RadioButton
                        android:id="@+id/multi_tool"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:text="@string/multi" />

                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/minit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:ignore="InefficientWeight">

                <TextView
                    android:id="@+id/minit_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/_3minit"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/minbatstat_label"
                        android:layout_width="286dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="20dp"
                        android:text="@string/_3minit_battery_in_statusbar"
                        android:textSize="20sp" />

                    <Switch
                        android:id="@+id/minbatstat_switch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_weight="1"
                        android:checked="false"
                        android:switchMinWidth="50dp"
                        android:switchTextAppearance="@style/TextAppearance.AppCompat"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/minbatimm_label"
                        android:layout_width="284dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="20dp"
                        android:text="@string/_3minit_battery_in_immersive"
                        android:textSize="20sp" />

                    <Switch
                        android:id="@+id/minbatstat_imm_switch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_weight="1"
                        android:checked="false"
                        android:switchMinWidth="50dp"
                        android:switchTextAppearance="@style/TextAppearance.AppCompat"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/minbataod_label"
                        android:layout_width="282dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="20dp"
                        android:text="@string/_3minit_battery_in_aod"
                        android:textSize="20sp" />

                    <Switch
                        android:id="@+id/minbataod_switch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_weight="1"
                        android:checked="false"
                        android:switchMinWidth="50dp"
                        android:switchTextAppearance="@style/TextAppearance.AppCompat"
                        android:textSize="14sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/signal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/statbar_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/stausbar"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/signal_label"
                        android:layout_width="294dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="20dp"
                        android:text="@string/aosp_signal_icons"
                        android:textSize="20sp" />

                    <Switch
                        android:id="@+id/wide_data"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_weight="1"
                        android:checked="false"
                        android:switchMinWidth="50dp"
                        android:switchTextAppearance="@style/TextAppearance.AppCompat"
                        android:textSize="14sp"
                        tools:ignore="InefficientWeight" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
