<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lg_v20_mod_control"
            android:textAlignment="center"
            android:textColor="@android:color/primary_text_light"
            android:textSize="26sp" />

        <LinearLayout
            android:id="@+id/enabled"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            tools:ignore="InefficientWeight">

            <Switch
                android:id="@+id/enable_switch"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:switchMinWidth="50dp"
                android:text="@string/enabled"
                android:textColor="@android:color/tertiary_text_light"
                android:textSize="20sp"
                tools:ignore="NestedWeights" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/has_mod"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Switch
                android:id="@+id/has_mod_switch"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:switchMinWidth="50dp"
                android:switchTextAppearance="@style/TextAppearance.AppCompat"
                android:text="@string/mod_installed"
                android:textColor="@android:color/tertiary_text_light"
                android:textSize="20sp"
                tools:ignore="InefficientWeight" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/only_enable_if_you_have_flashed_my_mod"
            android:textAlignment="center" />

    </LinearLayout>

</FrameLayout>
